+- Fixed CountyOrEqual and StateOrEqual opacity not showing correctly when the layer is applied.

--- a/styles/web_page.css
+++ b/styles/web_page.css
@@ -85,6 +85,11 @@ leaflet map, and more.
     margin-top: 9px;
     z-index: 1;
 }
+.leaflet-interactive {
+    /* Used for filling in state lines when countyorequal or stateorequal layer is applied to leaflet map */
+    fill: #000000;
+    fill-opacity: 0.2;
+}
 #resetViewLeafletOption {
     position: absolute;
     right: 155px;
